--- a/success.html
+++ b/success.html
@@ -13,8 +13,8 @@
   <main class="container">
     <section class="feedback">
       <img src="assets/img/success.svg" alt="Ilustrasi Sukses" width="300">
-      <h1>Happy Joined</h1>
-      <p>Selamat Datang Mahasiswa Baru Rekayasa Perangkat Lunak 2022! Selanjutnya, Kirimkan bukti pengisian form kapada kontak dibawah ini untuk dimasukkan ke grup <span style="color: var(--secondary-color); font-weight: 600;">RPL MUDA 2022</span></p>
+      <h1>Welcome!</h1>
+      <p>Selamat Datang Mahasiswa Baru Rekayasa Perangkat Lunak 2022! Selanjutnya, Kirimkan bukti pengisian form kepada kontak dibawah ini untuk dimasukkan ke grup <span style="color: var(--secondary-color); font-weight: 700;">RPL MUDA 2022</span></p>
     </section>
 
     <section class="contact">
@@ -31,9 +31,12 @@
   </main>
 
   <footer>
-    <span class="copy">&copy;Copyright</span>
+    <p>Support By:</p>
+    <img src="assets/img/logo-rpl.png" alt="Logo RPL">
     <img src="assets/img/logo-himarpl.png" alt="Logo HIMARPL">
     <img src="assets/img/logo-kabinet-explora.png" alt="Logo HIMARPL">
+
+    <span class="copy">&copy;Copyright HIMARPL 2022</span>
   </footer>
 
   <script src="https://kit.fontawesome.com/33696e8b5a.js" crossorigin="anonymous"></script>
