--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
 
       <label class="label">Screenshot hasil pengumuman SBMPTN</label>
       <div class="field_file">
-        <img class="file_img" id="img-preview" src="" alt="">
+        <img class="file_img" id="img-preview" src="" alt="Image Upload" title="Klik untuk ganti">
         <input type="file" name="screenshot" id="screenshot" onchange="showImage()" accept="image/png, image/jpeg, image/jpg">
         <p id="caption">Drag file atau klik area kotak</p>
+        <button class="file_remove" id="btn-remove" style="display: none;" title="Hapus gambar">
+          <i class="fa-solid fa-xmark fa-lg"></i>
+        </button>
       </div>
 
       <div class="warning">
@@ -68,9 +71,11 @@
   </main>
 
   <footer>
-    <span class="copy">&copy;Copyright</span>
+    <p>Support By:</p>
+    <img src="assets/img/logo-rpl.png" alt="Logo RPL">
     <img src="assets/img/logo-himarpl.png" alt="Logo HIMARPL">
-    <img src="assets/img/logo-kabinet-explora.png" alt="Logo HIMARPL">
+    <img src="assets/img/logo-kabinet-explora.png" alt="Logo Kabinet Explora">
+    <span class="copy">&copy;Copyright HIMARPL 2022</span>
   </footer>
 
   <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
